@@ -23,91 +23,99 @@
  */
 package com.paperworld.core.util.math;
 
-
-public class Vector3D {	
+public class Vector3D {
 	public double x;
-	
+
 	public double y;
-	
+
 	public double z;
-	
-	public Vector3D(){
+
+	public Vector3D() {
 		x = 0.0;
 		y = 0.0;
 		z = 0.0;
 	}
-	
-	public Vector3D(double x, double y, double z){
+
+	public Vector3D(double x, double y, double z) {
 		this.x = x;
 		this.y = y;
 		this.z = z;
 	}
-	
+
 	/**
-	* Modulo
-	*/
-	public double length()
-	{
-		return Math.sqrt( this.x*this.x + this.y*this.y + this.z*this.z );
+	 * Modulo
+	 */
+	public double length() {
+		return Math.sqrt(this.x * this.x + this.y * this.y + this.z * this.z);
 	}
-	
-	public double lengthSquared()
-	{
-		return x*x + y*y + z*z;
+
+	public double lengthSquared() {
+		return x * x + y * y + z * z;
 	}
-	
-	public void scale(double s)
-	{
+
+	public void scale(double s) {
 		x *= s;
 		y *= s;
 		z *= s;
 	}
-	
+
 	/**
 	 * Normalize.
 	 */
-	public void normalise()
-	{
+	public void normalise() {
 		double mod = length();
 
-		if( mod != 0 && mod != 1)
-		{
+		if (mod != 0 && mod != 1) {
 			this.x /= mod;
 			this.y /= mod;
 			this.z /= mod;
 		}
 	}
-	
+
 	/**
-	* Returns a new Number3D object that is a clone of the original instance with the same three-dimensional values.
-	*
-	* @return	A new Number3D instance with the same three-dimensional values as the original Number3D instance.
-	*/
-	public Vector3D copy()
-	{
-		return new Vector3D( x, y, z );
+	 * Returns a new Number3D object that is a clone of the original instance
+	 * with the same three-dimensional values.
+	 * 
+	 * @return A new Number3D instance with the same three-dimensional values as
+	 *         the original Number3D instance.
+	 */
+	public Vector3D copy() {
+		return new Vector3D(x, y, z);
 	}
 	
-	public static Vector3D sub(Vector3D v0, Vector3D v1)
-	{
+	public void add(Vector3D other){
+		x += other.x;
+		y += other.y;
+		z += other.z;
+	}
+
+	public static Vector3D sub(Vector3D v0, Vector3D v1) {
 		return new Vector3D(v0.x - v1.x, v0.y - v1.y, v0.z - v1.z);
 	}
-	
-	public Vector3D returnSubtraction(Vector3D other){
+
+	public Vector3D returnSubtraction(Vector3D other) {
 		return new Vector3D(x -= other.x, y -= other.y, z -= other.z);
 	}
-	
-	public Vector3D returnScale(Double s){
+
+	public Vector3D returnScale(Double s) {
 		return new Vector3D(x *= s, y *= s, z *= s);
 	}
-	
-	public void clear(){
+
+	public void clear() {
 		x = 0.0;
 		y = 0.0;
 		z = 0.0;
 	}
-	
-	public String toString(){
+
+	public boolean equals(Vector3D other) {
+		return x == other.x && y == other.y && z == other.z;
+	}
+
+	public boolean notEquals(Vector3D other) {
+		return x != other.x || y != other.y || z != other.z;
+	}
+
+	public String toString() {
 		return "Vector3D(" + x + ", " + y + ", " + z + ")";
 	}
 
